[project]
name = "ptmem"
version = "1.2.0"
description = "A simple file syntax for declaring flash cards."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[project.scripts]
ptmem = "ptmem.main:main"
